syntax = "proto3";

package pb;

option go_package = "github.com/zarszz/go-grpc/pb";

message UpdatePostRequest {
    string Id = 1;  
    optional string Title = 2;
    optional string Content = 3;
    optional string Image = 4;
    optional string User = 5;
  }
  
